# 42Wolfsburg_WebServ

./: .gitignore  CMakeLists.txt  Makefile  README.md  webserv
cgi-bin/: loop.py
conf/: default.conf  test.conf  test1.conf
configs/: default.conf  multiple.conf
docs/fusion_web/: about.html  cgi_test.html  delete_page.html  index.html  login.html  services.html  upload.html
docs/test_site/: index.html  script.js  styles.css
inc/: CGIConfig.hpp  Client.hpp  ConfigParser.hpp  ConfigurationFile.hpp  Location.hpp  Logger.hpp  Mime.hpp  Request.hpp  Response.hpp  ServerConfig.hpp  ServerManager.hpp  Utils.hpp  Webserv.hpp
include/: CGI_Configuration.hpp  Client.hpp  ConfigurationFile.hpp  ConfigurationParser.hpp  Location.hpp  Logger.hpp  Mime.hpp  Request.hpp  Response.hpp  ServerConfiguration.hpp  ServerManager.hpp  Utils.hpp  Webserv.hpp
src/: CGIConfig.cpp  CGI_Configuration.cpp  CGI_Getters.cpp  CGI_Setters.cpp  Client.cpp  ConfigParser.cpp  ConfigurationFile.cpp  ConfigurationParser.cpp  Errors_Handler.cpp  Location.cpp  Location_Getters.cpp  Location_Setters.cpp  Logger.cpp  Mime.cpp  Request.cpp  RequestCopy.cpp  RequestParser.cpp  Response.cpp  ServerConfig.cpp  ServerConfiguration.cpp  ServerManager.cpp  Utility.cpp  Utils.cpp  main.cpp
src/CGI/: CGI_Configuration.cpp  CGI_Getters.cpp  CGI_Setters.cpp
src/Client/: Client.cpp
src/Configuration/: ConfigurationFile.cpp  ConfigurationParser.cpp
src/Location/: Getters.cpp  Location.cpp  Setters.cpp
src/Request/: Request.cpp  (+1 more)
test/: CMakeCache.txt  Makefile  cmake_install.cmake  webserver
(+6 files in other folders)
